codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__misalignment_turn_end_cleared_composer.snap
---
source: tui/src/chatwidget/tests/misalignment_policy_tests.rs
assertion_line: 230
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
▌
▌ Ask Codex to do anything
▌
  esc esc to edit previous message
