codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_draft_footer_narrow.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
assertion_line: 89
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 36))"
---
▌
▌ make a plan
▌
  gpt-5 default · /tmp/project
